testsuite/tests/rename/should_fail/T2310.hs
{-# OPTIONS_GHC -XScopedTypeVariables #-}

module Foo where

foo = let c = \ x :: a -> (x :: a) in co
